<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     tools:context=".MainActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_weight="1"
     android:padding="8dp" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="8dp"
        android:text="@string/sequence_1"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="8dp"
        android:text="@string/sequence_2"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="8dp"
        android:text="@string/sequence_3"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />


</LinearLayout>